--- a/estilo.css
+++ b/estilo.css
@@ -11,6 +11,15 @@ nav{
     text-align:center;
     display: flex;
     align-items: center;
-    gap: 20px;
-    padding: 10px;
+    gap: 15px;
+    padding:0px;
+    
+}
+.logos img{
+    width: 17px;
+    justify-content: center;
+
+}
+hr{
+    height: 15px;
 }
