feat: :sparkles: arrangement
structural arrangement and adding style and design

by @michelrubio

--- a/estilo.css
+++ b/estilo.css
@@ -7,12 +7,15 @@ header{
     padding: 0%;
 
 }
+
+
 nav{
     text-align:center;
     display: flex;
     align-items: center;
     gap: 15px;
     padding:0px;
+    text-decoration: none;
     
 }
 .logos img{
@@ -23,3 +26,41 @@ nav{
 hr{
     height: 15px;
 }
+main{
+    text-align: center;
+    
+    flex-direction: row;
+}
+.imagen-inicio{
+    width: 100%;
+    margin-top: 100px;
+    padding: 0%;
+}
+.acciones{
+    text-decoration: none;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    color: black;
+}
+.cuadro{
+    
+    margin: 50px;
+    margin-top: 40px;
+
+
+}
+.info{
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+}
+footer{
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 50px;
+}
+
+
